<resources>
    <string name="app_name">College Information</string>

    <string name="loading">Loading...</string>
    <string name="loading_data">Loading data...</string>
    <string name="loadingandwait">Loading... Please wait</string>
    <string name="one_of"> 1 of </string>
    <string name="of"> of </string>
    <string name="selected">selected</string>
    <string name="temp_file_name">jsonFromStorage</string>
    <string name="json_ext">json</string>

    <string name="find_college_button_caption">Find College</string>
    <string name="go_favorite_button_caption">View Favorites</string>

    <string name="not_favorite_college">no</string>
    <string name="favorite_college">yes</string>

    <string name="firebase_uri_address">gs://college-information.appspot.com/</string>

    <string name="latest_year_data">2014</string>
    <string name="url_data_gov">https://api.data.gov/ed/collegescorecard/</string>
    <string name="endpoint_get_all_data">v1/schools</string>
    <string name="query_page_number">_page=</string>
    <string name="fields_for_names">fields=id,school.name,school.city,school.state,school.zip,location.lat,location.lon,school.region_id,school.degrees_awarded.highest,school.state_fips</string>
    <string name="fields_for_results">fields=id,school.name,school.city,school.state,school.zip,location.lat,location.lon,school.school_url,2014.admissions.sat_scores.25th_percentile.critical_reading,2014.admissions.sat_scores.75th_percentile.critical_reading,2014.admissions.sat_scores.25th_percentile.math,2014.admissions.sat_scores.75th_percentile.math,2014.admissions.sat_scores.25th_percentile.writing,2014.admissions.sat_scores.75th_percentile.writing,2014.admissions.act_scores.25th_percentile.cumulative,2014.admissions.act_scores.75th_percentile.cumulative,2014.cost.tuition.in_state,2014.cost.tuition.out_of_state,2014.aid.pell_grant_rate,2014.aid.federal_loan_rate</string>
    <string name="fields_for_getting_total_records">fields=id</string>
    <string name="number_per_page">_per_page=100</string>
    <string name="number_per_page_one">_per_page=1</string>
    <string name="limit_number_per_page">100</string>

    <string name="url_data_nearbycolleges">https://www.nearbycolleges.info/api/</string>
    <string name="url_specific_school_nearbycolleges">https://www.nearbycolleges.info/api/schools/{unitid}</string>
    <string name="unit_id_from_nearbycolleges">unitid</string>
    <string name="url_query_all_colleges">autocomplete?q=&amp;limit=100000000</string>
    <string name="api_key_for_nearbycolleges">88ae0f34-84d6-4e6d-b3c6-a0877fdb1bce</string>

    <string name="query_api_key">api_key=</string>
    <string name="api_key">8Kf2QRVxErc7cAJnMDsBngV7AogpKhF7RY4PBBFD</string>

    <string name="query_school_id">id</string>
    <string name="query_school_name">school.name</string>
    <string name="query_school_degrees">school.degrees_awarded.highest</string>
    <string name="query_school_states">school.state_fips</string>
    <string name="query_school_regions">school.region_id</string>
    <string name="query_school_zips">school.zip</string>
    <string name="query_sort_by_school_name">_sort=school.name:asc</string>
    <string name="page_number_parameter_name">{pageNumber}</string>
    <string name="field_collegescorecard_percentage">academics.program_percentage.</string>
    <string name="field_collegescorecard_not_equal_to_zero">__not=0.0</string>


    <string name="degree_certificate">Certificate</string>
    <string name="degree_associate">Associate</string>
    <string name="degree_bachelors">Bachelor\'s</string>
    <string name="degree_graduate">Master\'s</string>
    <string name="degree_certificate_value">1</string>
    <string name="degree_associate_value">2</string>
    <string name="degree_bachelors_value">3</string>
    <string name="degree_graduate_value">4</string>

    <string name="action_search">Search</string>
    <string name="title_activity_search_locations_states">SearchLocationsStatesActivity</string>

    <string name="transition_photo">transitionPhoto</string>
    <string name="appwidget_text">College Info</string>
    <string name="add_widget">Add widget</string>

    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">It looks like your internet connection is off. \n Please turn it on and try again</string>

    <string name="id">id</string>
    <string name="favorite_results">favoriteresults</string>
    <string name="resultdetailinfo">resultdetailinfo</string>

    <string name="debugandtracktime">"Time length for getting version data: %s"</string>

    <string name="info_message_no_result">No results based on search</string>
    <string name="info_message_no_favorites">Unable to show since there is no favorite.</string>
    <string name="info_message_total_records_zero">Total Records In Results: 0</string>
    <string name="info_message_total_records">Total Records In Results: </string>
    <string name="info_message_total_favorites">Total Records in Favorites: </string>

    <string name="google_maps_url_address">com.google.android.apps.maps</string>
    <string name="geo">geo:</string>

    <string name="zips">zips</string>

    <string name="question_sure_to_select">Are you sure to select "</string>
    <string name="question_mark">\?</string>
    <string name="info_message_cancel_name">If you cancel, it will be any name in search result.</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>

    <string name="content_desc_likes">Like</string>
    <string name="content_desc_college_image">picture of college</string>
    <string name="content_desc_search_image">picture of each search</string>
    <string name="content_desc_widget_college">Going to Collection Information app</string>
    <string name="content_desc_find_college">Find College</string>
    <string name="content_desc_view_favorites">View Favorites</string>

    <string name="hint_zip_code">92562</string>
    <string name="label_zip_code">Zip Code:</string>
    <string name="label_state">State:</string>
    <string name="label_region">Region:</string>
    <string name="label_website">Website</string>
    <string name="label_location">Location</string>
    <string name="label_cost">Cost</string>
    <string name="label_tuition_in_state">Tuition - In-State</string>
    <string name="label_tuition_out_state">Tuition - Out-State</string>
    <string name="label_aid">Aid</string>
    <string name="label_undergraduates_receiving_fed_loans">% of undergraduates receiving fed loans</string>
    <string name="label_pell_grants_recipients">% of Pell Grants Recipients</string>
    <string name="label_admission">Admission</string>
    <string name="label_sat_critical_reading_25">SAT Critical Reading 25th</string>
    <string name="label_sat_critical_reading_75">SAT Critical Reading 75th</string>
    <string name="label_sat_math_25">SAT Math 25th</string>
    <string name="label_sat_math_75">SAT Math 75th</string>
    <string name="label_sat_writing_25">SAT Writing 25th</string>
    <string name="label_sat_writing_75">SAT Writing 75th</string>
    <string name="label_act_25">ACT 25th</string>
    <string name="label_act_75">ACT 75th</string>

    <string name="default_value_selected">0 selected</string>
    <string name="default_value_of_number_on_college">$15k</string>
</resources>
