<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.patrickwallin.projects.collegeinformation.SearchLocationsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/zip_code_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:text="@string/label_zip_code" />

                <EditText
                    android:hint="@string/hint_zip_code"
                    android:id="@+id/zip_code_edit_view"
                    android:layout_toRightOf="@id/zip_code_text_view"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </RelativeLayout>
        </LinearLayout>

        <!--
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Or"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        -->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/state_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/label_state" />

                <TextView
                    android:id="@+id/selected_state_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/default_value_selected" />
            </RelativeLayout>
        </LinearLayout>

        <!--
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Or"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        -->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/region_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/label_region" />

                <TextView
                    android:id="@+id/selected_region_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/default_value_selected" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
